--- a/pom.xml
+++ b/pom.xml
@@ -67,6 +67,13 @@
             <version>1.0.2</version>
         </dependency>
 
+        <!-- 解析html CodeUtil使用-->
+        <dependency>
+            <groupId>org.jsoup</groupId>
+            <artifactId>jsoup</artifactId>
+            <version>1.8.3</version>
+        </dependency>
+
         <!--lombok-提供setter、getter方法等 -->
         <!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
         <dependency>
