--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,18 @@
             <version>3.7</version>
         </dependency>
 
+        <!--ServletRequestAttributes+HttpServletRequest-->
+        <dependency>
+            <groupId>javax.servlet</groupId>
+            <artifactId>javax.servlet-api</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>5.1.9.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
